--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -112,15 +112,10 @@
 
         <div class="btn-group btn-group-justified">
             <div class="btn-group">
-                <button tooltip="View Hub Details" tooltip-placement="bottom"
+                <a href ui-sref="connector.devices.detail({uuid: g.uuid})" tooltip="View Device Details" tooltip-placement="bottom"
                         tooltip-popup-delay="5" type="button" class="btn btn-default" ng-model="g.showDetails" btn-checkbox
                         btn-checkbox-true="true" btn-checkbox-false="false">
-                    <i class="fa" style="padding-right: 5px;" ng-class="{'fa-info-circle' : g.showDetails, 'fa-info' : !g.showDetails}"></i>Info
-                </button>
-            </div>
-            <div class="btn-group">
-                <a href ui-sref="connector.devices.edit({uuid : g.uuid})" class="btn btn-inverse">
-                    <i class="fa fa-edit" style="margin-right: 5px;"></i> Edit
+                    <i class="fa fa-th-list" style="padding-right: 5px;" ></i>Info
                 </a>
             </div>
             <div  class="btn-group">
@@ -129,10 +124,6 @@
                 </button>
             </div>
         </div>
-    </div>
-    <div class="col-sm-10">
-      <!--<device-carousel hub="g" smart-devices="smartDevices"></device-carousel>-->
-
     </div>
 </div>
 <div class="divScroll">
