--- a/public/pages/connector/index.html
+++ b/public/pages/connector/index.html
@@ -11,7 +11,7 @@
                 </div>
                 <ul class="nav nav-tabs">
                     <li ng-class="{'active': $state.includes('connector.devices')}">
-                        <a href="" ui-sref="connector.devices.index">Devices</a>
+                        <a href="" ui-sref="connector.devices">Devices</a>
                     </li>
                     <li ng-class="{'active': $state.includes('connector.channels')}">
                         <a href="" ui-sref="connector.channels.index">Channels</a>
