made devices & device detail siblings.

--- a/public/index.html
+++ b/public/index.html
@@ -145,7 +145,7 @@
                         </a>
                     </li>
                     <li id="nav-connector" ng-class="{'active': $state.includes('connector')}">
-                        <a href="" ui-sref="connector.devices">
+                        <a href="" ui-sref="connector.devices.all">
                             <i class="icon-code-fork"></i>
                             <span>Connectors</span>
                         </a>
