--- a/public/pages/admin/groups/detail.html
+++ b/public/pages/admin/groups/detail.html
@@ -1,4 +1,4 @@
-<h2 class="text-center col-xs-12 col-sm-12 col-md-10 col-lg-10">{{ group.name }}</h2>
+<h2 class="text-center col-xs-12 col-sm-12 col-md-10 col-lg-10">{{ resourcePermission.name }}</h2>
 <div class="panel green-border col-xs-12 col-sm-12 col-md-3 col-lg-3 group-info-panel resource-panel">
     <div class="panel-heading green-background">
         <h3 class="title text-center">
