--- a/public/pages/connector.html
+++ b/public/pages/connector.html
@@ -11,7 +11,7 @@
         </div>
         <ul class="nav nav-tabs">
           <li ng-class="{'active': $state.includes('connector.devices')}">
-            <a href="" ui-sref="connector.devices">Devices</a>
+            <a href="" ui-sref="connector.devices.all">Devices</a>
           </li>
           <li ng-class="{'active': $state.includes('connector.gateway')}">
             <a href="" ui-sref="connector.gateway">Gateways</a>
