--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -34,7 +34,7 @@
                                 <div ng-switch="!!devices ? devices.length : 0" >
                                     <h1>
                                         <div ng-switch-when="0"><i class="fa fa-cog fa-spin"></i></div>
-                                        <div ng-switch-default><a href="" ui-sref="connector.devices">{{devices.length}}</a></div>
+                                        <div ng-switch-default><a href="" ui-sref="connector.devices.all">{{devices.length}}</a></div>
                                     </h1>
                                 </div>
                             </div>
