--- a/public/pages/connector/devices/wizard/index.html
+++ b/public/pages/connector/devices/wizard/index.html
@@ -12,7 +12,7 @@
            <a type="button" id="wizard-next-btn" class="btn btn-default" ui-sref="{{getNextState()}}">Next&nbsp;&nbsp;<i class="fa fa-chevron-circle-right"></i></a>
 
            <a  ng-show="$state.is('connector.devices.wizard.findhub')" type="button" id="wizard-finish-btn"  class="btn btn-success" ng-disabled="{{!canClaim(hubName, selectedHub)}}" ng-click="saveHub(selectedHub, hubName)" ><i class="fa fa-save"></i>&nbsp;&nbsp;Finish</a>
-           <a  ng-show="$state.is('connector.devices.wizard.finished')" type="button"  class="btn btn-success"  ui-sref="connector.devices" ><i class="fa fa-save"></i>&nbsp;&nbsp;Finish</a>
+           <a  ng-show="$state.is('connector.devices.wizard.finished')" type="button"  class="btn btn-success"  ui-sref="connector.devices.all" ><i class="fa fa-save"></i>&nbsp;&nbsp;Finish</a>
        </div>
    </div>
 </div>
