fixed channels on home page

--- a/public/index.html
+++ b/public/index.html
@@ -257,7 +257,7 @@
     <script src="assets/javascripts/plugins/validate/additional-methods.js" type="text/javascript"></script>
     <script src="assets/javascripts/jsoneditor/jsoneditor.js" type="text/javascript"></script>
     <script src="assets/javascripts/bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
-    <!-- // <script src="assets/javascripts/isotope.js"></script> -->
+    <script src="assets/javascripts/isotope.js"></script>
     <!-- // <script src="assets/javascripts/skroller.js"></script> -->
     <script src="assets/javascripts/elastic.min.js"></script>
     <script src="assets/javascripts/elasticsearch.angular.js"></script>
@@ -274,7 +274,7 @@
   	<script src="assets/javascripts/google-map.js"></script>
   	<script src="assets/javascripts/twitter-fetcher.js"></script>
   	<script src="assets/javascripts/imagesloaded.pkgd.js"></script>
-  	<script src="assets/javascripts/jquery.isotope.js"></script>
+  	<!-- // <script src="assets/javascripts/jquery.isotope.js"></script> -->
   	<script src="assets/javascripts/jquery.flexslider-min.js"></script>
   	<script src="assets/javascripts/jpreloader.min.js"></script>
   	<script src="assets/javascripts/jquery.videoBG.custom.js"></script>
