--- a/public/pages/analyzer.html
+++ b/public/pages/analyzer.html
@@ -1,5 +1,6 @@
 <section id='content'>
     <div class='container full-screen'>
+        <!-- Made an Edit -->
         <div class='row' id='content-wrapper'>
             <div class='col-xs-12'>
 
@@ -23,6 +24,7 @@
                   <br /><br />
 
                   <canvas id="mycanvas" width="400" height="100"></canvas>
+  
 
                   <div id="legend"></div>
 
