--- a/public/pages/analyzer.html
+++ b/public/pages/analyzer.html
@@ -37,7 +37,7 @@
 
             <div class="container-fluid">
               <div class="row">
-                <h2>Search Analytics</h2>
+                <h2>Search Freeform Analytics</h2>
                 <div class="input-group">
                   <form class="form-inline col-md-12">
                     <div class="form-group col-md-8">
