--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <title>Octoblu - Internet of Everything!</title>
 
     <!-- SCROLLS -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <!-- <link href="assets/stylesheets/bootstrap.min.css" rel="stylesheet" media="screen"> -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <link href='http://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700' rel='stylesheet' type='text/css'>
@@ -84,7 +84,7 @@
                 <div id="brand">
                 <a href="#top" class="navbar-brand">
                     <img src="assets/images/octoblu.png" alt="Octoblu Logo" />
-                    <h1 class="hide">Parallax HTML One-Page Template</h1>
+                    <h1 class="hide"></h1>
                 </a>
                 </div>
             </div>
@@ -102,7 +102,6 @@
         </div>
     </div>
     <!-- END NAVBAR -->
-
 
     <header ng-show="authorization.isAuthenticated">
         <nav class="navbar navbar-default navbar-fixed-top">
@@ -227,20 +226,21 @@
     <footer></footer>
 
     <!-- build:js scripts/plugins.js -->
-    <script src="http://code.jquery.com/jquery-2.1.0.min.js" type="text/javascript"></script>
+    <script src="http://code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
+    // <script src="assets/javascripts/jquery.isotope.js"></script>
+    <!-- // <script src="assets/javascripts/isotope.js"></script> -->
     <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js" type="text/javascript"></script>
     <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.min.js" type="text/javascript"></script>
     <script src="assets/javascripts/plugins/jquery_ui_touch_punch/jquery.ui.touch-punch.min.js" type="text/javascript"></script>
     <script src="assets/javascripts/jquery/jquery.cookie.js"></script>
     <script src="assets/javascripts/jquery/jquery.mobile.custom.min.js" type="text/javascript"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-animate.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-sanitize.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-cookies.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-resource.js"></script>
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular-animate.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular-sanitize.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular-cookies.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular-resource.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script src="assets/javascripts/bootstrap-switch/dist/js/bootstrap-switch.min.js"></script>
-
     <!-- endbuild -->
 
     <!-- build:js scripts/modules.js -->
@@ -250,22 +250,16 @@
     <script src="assets/javascripts/angular-ui-utils/ui-utils.min.js"></script>
     <script src="assets/javascripts/angular-google-analytics.js"></script>
     <script src="assets/javascripts/plugins/modernizr/modernizr.min.js" type="text/javascript"></script>
-    <script src="assets/javascripts/canvasjs.min.js" type="text/javascript"></script>
     <script src="assets/javascripts/plugins/retina/retina.js" type="text/javascript"></script>
     <script src="assets/javascripts/theme.js" type="text/javascript"></script>
     <script src="assets/javascripts/plugins/validate/jquery.validate.min.js" type="text/javascript"></script>
     <script src="assets/javascripts/plugins/validate/additional-methods.js" type="text/javascript"></script>
     <script src="assets/javascripts/jsoneditor/jsoneditor.js" type="text/javascript"></script>
     <script src="assets/javascripts/bootstrap/ui-bootstrap-tpls-0.10.0.min.js"></script>
-    <script src="assets/javascripts/isotope.js"></script>
-    <!-- // <script src="assets/javascripts/skroller.js"></script> -->
     <script src="assets/javascripts/elastic.min.js"></script>
     <script src="assets/javascripts/elasticsearch.angular.js"></script>
     <script src="assets/javascripts/angular-dragdrop.min.js"></script>
     <script src="assets/javascripts/smoothie.js"></script>
-
-  	<!-- // <script src="assets/javascripts/jquery-2.1.0.min.js"></script> -->
-  	<!-- // <script src="assets/javascripts/bootstrap.min.js"></script> -->
 
   	<script src="assets/javascripts/jquery.scrollTo-1.4.3.1-min.js"></script>
   	<script src="assets/javascripts/jquery.localscroll-1.2.7-min.js"></script>
@@ -274,7 +268,7 @@
   	<script src="assets/javascripts/google-map.js"></script>
   	<script src="assets/javascripts/twitter-fetcher.js"></script>
   	<script src="assets/javascripts/imagesloaded.pkgd.js"></script>
-  	<!-- // <script src="assets/javascripts/jquery.isotope.js"></script> -->
+
   	<script src="assets/javascripts/jquery.flexslider-min.js"></script>
   	<script src="assets/javascripts/jpreloader.min.js"></script>
   	<script src="assets/javascripts/jquery.videoBG.custom.js"></script>
@@ -323,6 +317,7 @@
     <script src="angular/controllers/services.js"></script>
     <script src="angular/controllers/signup.js"></script>
     <!-- endbuild -->
+
 
     <!--
       <script>
