koshin helped me fix the d3 charts on the dashboard

--- a/public/index.html
+++ b/public/index.html
@@ -250,6 +250,10 @@
     <script src="assets/javascripts/angular-ui-utils/ui-utils.min.js"></script>
     <script src="assets/javascripts/angular-google-analytics.js"></script>
     <script src="assets/javascripts/plugins/modernizr/modernizr.min.js" type="text/javascript"></script>
+    <script src="bower_components/d3/d3.js"></script>
+    <script src="bower_components/nvd3/nv.d3.js"></script>
+    <script src="bower_components/angular-nvd3/dist/angular-nvd3.js"></script>
+
     <script src="assets/javascripts/plugins/retina/retina.js" type="text/javascript"></script>
     <script src="assets/javascripts/theme.js" type="text/javascript"></script>
     <script src="assets/javascripts/plugins/validate/jquery.validate.min.js" type="text/javascript"></script>
