Fixed update/change permissions groups to be synchronous. Tested heavily and it works in all cases!

--- a/public/pages/admin/groups/detail.html
+++ b/public/pages/admin/groups/detail.html
@@ -119,6 +119,9 @@
             </li>
         </ul>
     </div>
+    <div class="panel-footer row">
+        <a href ng-click="save()" class=" col-xs-12 btn btn-lg btn-success">Save</a>
+    </div>
 </div>
 <div class="panel sea-blue-border col-xs-12 col-sm-12 col-md-3 col-lg-3 group-info-panel resource-panel">
     <div class="panel-heading sea-blue-background">
