--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -28,7 +28,10 @@
         min-width: 50px;
     }
 
-
+    .permissions-panel .panel-footer {
+        padding-bottom: 10px;
+        margin:0;
+    }
    .resource-panel .panel-heading .title {
         color: #ffffff !important;
     }
