--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -1,40 +1,37 @@
 <div class="row">
-    <h1><i class="fa fa-hdd-o"></i>My Devices</h1>
-    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-9 panel-group">
-        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3 panel" ng-repeat="device in devices">
+    <h1 style="margin-left: 20px;"><i class="fa fa-hdd-o" style="margin-right: 5px;"></i>My Devices</h1>
+    <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
+        <div class="col-xs-6 col-sm-6 col-md-4 col-lg-3 panel" ng-repeat="device in devices | orderBy:'name'">
           <div class="panel-heading">
-             <h3 class="text-center">{{device.name}}</h3>
+             <h3 class="text-center"><i class="fa fa-hdd-o" style="margin-right: 5px;"></i>{{device.name}}</h3>
           </div>
          <div class="panel-body">
-             <!--<div class="media">-->
-                 <!--<div class="media-body">-->
-                    <!--<div class="media-heading">-->
-                        <!--<h4>{{device.name}}</h4>-->
-                    <!--</div>-->
-                 <!--</div>-->
-             <!--</div>-->
-
+             <div class="btn-group btn-group-justified">
+                 <div class="btn-group">
+                     <a href ui-sref="connector.devices.detail({uuid : device.uuid})" class="btn btn-inverse btn-sm">
+                         <i class="fa fa-edit"></i>Edit
+                     </a>
+                 </div>
+                 <div class="btn-group">
+                     <button type=button" class="btn btn-danger btn-sm" ng-click="deleteDevice(device)">
+                         <i class="fa fa-trash-o fa-lg"></i>Delete
+                     </button>
+                 </div>
+             </div>
          </div>
-            <div class="btn-group btn-group-justified">
-                <div class="btn-group">
-                    <a href ui-sref="connector.devices.detail({uuid : device.uuid})" class="btn btn-inverse btn-sm">
-                        <i class="fa fa-edit"></i>Edit
-                    </a>
-                </div>
-                <div class="btn-group">
-                    <button type=button" class="btn btn-danger btn-sm" ng-click="deleteDevice(device)">
-                        <i class="fa fa-trash-o fa-lg"></i>Delete
-                    </button>
-                </div>
-            </div>
+
         </div>
     </div>
-    <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
+    <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2">
        <div class="panel panel-primary">
            <div class="panel-heading">
-               <i class="fa fa-plus fa-lg"></i>
-               <i class="fa fa-hdd-o"></i>
-               Add Device
+               <h4 class="text-center">
+                   <i class="fa fa-plus fa-lg"></i>
+                   Add Device
+                   <i class="fa fa-hdd-o"></i>
+               </h4>
+
+
            </div>
            <div class="panel-body">
                    <a   ng-class="{'unavailable': ! smartDevice.enabled }" ng-repeat="smartDevice in smartDevices" class="pull-left" ng-click="addSmartDevice(smartDevice)" style="margin: 0 0 15px 15px; ">
@@ -43,18 +40,13 @@
 
            </div>
        </div>
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                <i class="fa fa-plus fa-lg"></i>
-                Add Hub
-            </div>
-            <div class="panel-body">
-                <a   ng-class="{'unavailable': ! smartDevice.enabled }" ng-repeat="smartDevice in smartDevices" class="pull-left" ng-click="addSmartDevice(smartDevice)" style="margin: 0 0 15px 15px; ">
-                    <img src="{{smartDevice.logo || defaultLogo }}" width="80" height="80"  ng-model="smartDevice" />
-                </a>
-
-            </div>
-        </div>
+       <div class="btn-group btn-group-justified">
+           <div class="btn-group">
+               <a class="btn btn-primary btn-lg" href ui-sref="connector.devices.wizard.instructions">
+                   <i class="fa fa-plus"></i> Add Hub<i class="fa fa-building-o" style="margin-left: 10px;"></i>
+               </a>
+           </div>
+       </div>
 
     </div>
 
