--- a/public/pages/connector/devices/wizard/index.html
+++ b/public/pages/connector/devices/wizard/index.html
@@ -1,13 +1,13 @@
 <div class="modal-dialog wizard-dialog">
    <div class="modal-content">
        <div class="modal-header">
-           <a type="button" class="close"  data-dismiss="modal" ui-sref="connector.devices" aria-hidden="true">&times;</a>
+           <a type="button" class="close"  data-dismiss="modal" ui-sref="connector.devices.all" aria-hidden="true">&times;</a>
            <h4 class="modal-title" id="myModalLabel"><i class="fa fa-home fa-2x"></i>&nbsp;&nbsp;Add a new Hub</h4>
        </div>
        <div ui-view class="modal-body">
        </div>
        <div class="modal-footer">
-           <a type="button" id="wizard-cancel-btn" class="btn btn-danger" data-dismiss="modal" ui-sref="connector.devices"><i class="fa fa-times"></i>&nbsp;&nbsp;Close</a>
+           <a type="button" id="wizard-cancel-btn" class="btn btn-danger" data-dismiss="modal" ui-sref="connector.devices.all"><i class="fa fa-times"></i>&nbsp;&nbsp;Close</a>
            <a type="button" ng-show="!$state.is('connector.devices.wizard.instructions')" id="wizard-previous-btn" class="btn btn-default"  ui-sref="{{getPreviousState()}}"><i class="fa fa-chevron-circle-left"></i>&nbsp;&nbsp;Previous</a>
            <a type="button" id="wizard-next-btn" class="btn btn-default" ui-sref="{{getNextState()}}">Next&nbsp;&nbsp;<i class="fa fa-chevron-circle-right"></i></a>
 
