--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -3,9 +3,18 @@
     <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
         <div class="col-xs-6 col-sm-6 col-md-4 col-lg-3 panel" ng-repeat="device in devices | orderBy:'name'">
           <div class="panel-heading">
-             <h3 class="text-center"><i class="fa fa-hdd-o" style="margin-right: 5px;"></i>{{device.name}}</h3>
+             <h3 class="text-center">
+                 {{device.name}}
+             </h3>
           </div>
-         <div class="panel-body">
+         <div class="panel-body center-block">
+
+                <span class="fa fa-stack fa-5x col-xs-push-3">
+                    <i class="fa fa-square-o fa-stack-2x"></i>
+                    <i class="fa fa-stack-1x" ng-class="{'fa-h-square' : device.type === 'gateway', 'fa-mobile' : device.type === 'mobile-hub', 'fa-hdd-o' : ! device.type || device.type == 'device'}"></i>
+                </span>
+
+
              <div class="btn-group btn-group-justified">
                  <div class="btn-group">
                      <a href ui-sref="connector.devices.detail({uuid : device.uuid})" class="btn btn-inverse btn-sm">
