--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -4,8 +4,13 @@
         <div class="col-xs-6 col-sm-6 col-md-4 col-lg-3 panel" ng-repeat="device in devices | orderBy:'name'">
           <div class="panel-heading">
              <h3 class="text-center">
-                 {{device.name}}
+
+                {{device.name}}
+                 <div class="pull-right">
+                    <i class="fa fa-power-off" ng-class="{'text-success': device.online, 'text-muted': ! device.online}"></i>
+                 </div>
              </h3>
+
           </div>
          <div class="panel-body center-block">
 
@@ -17,13 +22,13 @@
 
              <div class="btn-group btn-group-justified">
                  <div class="btn-group">
-                     <a href ui-sref="connector.devices.detail({uuid : device.uuid})" class="btn btn-inverse btn-sm">
-                         <i class="fa fa-edit"></i>Edit
+                     <a href ui-sref="connector.devices.detail({uuid : device.uuid})" class="btn btn-default">
+                         <i class="fa fa-th-large fa-lg" style="margin-right: 5px;"></i>Details
                      </a>
                  </div>
                  <div class="btn-group">
-                     <button type=button" class="btn btn-danger btn-sm" ng-click="deleteDevice(device)">
-                         <i class="fa fa-trash-o fa-lg"></i>Delete
+                     <button type=button" class="btn btn-danger" ng-click="deleteDevice(device)">
+                         <i class="fa fa-trash-o fa-lg" style="margin-right: 5px;"></i>Delete
                      </button>
                  </div>
              </div>
