--- a/public/pages/connector/devices/wizard/find-hub.html
+++ b/public/pages/connector/devices/wizard/find-hub.html
@@ -12,16 +12,16 @@
         <div class="panel-body">
             <form class="form-horizontal" role="form">
                 <div class="form-group">
-                    <label  class="col-sm-2 control-label">ID</label>
+                    <label  class="col-sm-2 control-label">UUID</label>
                     <div class="col-sm-10">
-                        <select  ng-required="!selectedHub" class="form-control" ng-change="checkClaim(hubName, selectedHub); notifyHubSelected(selectedHub)" ng-model="selectedHub" ng-required="!selectedHub" ng-options="g.uuid for g in availableGateways">
+                        <select  ng-required="!selectedHub" class="form-control" ng-change="checkClaim(hubName, selectedHub)" ng-model="selectedHub" ng-required="!selectedHub" ng-options="g.uuid for g in availableGateways">
                         </select>
                     </div>
                 </div>
                 <div class="form-group">
                     <label  class="col-sm-2 control-label">Name</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" ng-model="hubName" ng-change="checkClaim(hubName, selectedHub); notifyHubNameChanged(hubName)">
+                        <input type="text" class="form-control" ng-model="hubName" ng-change="checkClaim(hubName, selectedHub)">
                     </div>
                 </div>
                 <div class="form-group">
@@ -33,12 +33,12 @@
                             <ul class="list-group">
                                 <li class="list-group-item">Channel <span class="label label-primary pull-right">{{selectedHub.channel}}</span></li>
                                 <li class="list-group-item">UUID<span class="label label-primary pull-right">{{selectedHub.uuid}}</span></li>
-                                <li class="list-group-item">Token <span class="label label-primary pull-right">{{selectedHub.token}}</span></li>
                                 <li class="list-group-item">IP Address <span class="label label-primary pull-right">{{selectedHub.ipAddress}}</span></li>
                                 <li class="list-group-item">Localhost <span class="label label-primary pull-right">{{selectedHub.localhost}}</span></li>
                                 <li class="list-group-item">Online
                                     <div class="pull-right">
-                                        <toggle-switch state="{{selectedHub.online}}"></toggle-switch>
+                                        <i class="fa fa-power-off fa-lg" ng-class="{'text-success':selectedHub.online, 'text-muted':!selectedHub.online}"></i>
+                                        <!--<toggle-switch state="{{selectedHub.online}}"></toggle-switch>-->
                                     </div>
                                 </li>
                             </ul>
