--- a/public/pages/connector/devices/wizard/find-hub.html
+++ b/public/pages/connector/devices/wizard/find-hub.html
@@ -14,14 +14,14 @@
                 <div class="form-group">
                     <label  class="col-sm-2 control-label">UUID</label>
                     <div class="col-sm-10">
-                        <select  ng-required="!selectedHub" class="form-control" ng-change="checkClaim(hubName, selectedHub)" ng-model="selectedHub" ng-required="!selectedHub" ng-options="g.uuid for g in availableGateways">
+                        <select  ng-required="!selectedHub" class="form-control" ng-change="checkClaim(hubName, selectedHub);notifyHubSelected(selectedHub)" ng-model="selectedHub" ng-required="!selectedHub" ng-options="g.uuid for g in availableGateways">
                         </select>
                     </div>
                 </div>
                 <div class="form-group">
                     <label  class="col-sm-2 control-label">Name</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" ng-model="hubName" ng-change="checkClaim(hubName, selectedHub)">
+                        <input type="text" class="form-control" ng-model="hubName" ng-change="checkClaim(hubName, selectedHub); notifyHubNameChanged(hubName)">
                     </div>
                 </div>
                 <div class="form-group">
