--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -1,6 +1,9 @@
 <div class="row">
     <h1 style="margin-left: 20px;"><i class="fa fa-hdd-o" style="margin-right: 5px;"></i>My Devices</h1>
     <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
+        <div class="jumbotron" ng-if="devices.length == 0">
+            <p>You have no Devices or Hubs. Add a new Hub</p>
+        </div>
         <div class="col-xs-6 col-sm-6 col-md-4 col-lg-3 panel" ng-repeat="device in devices | orderBy:'name'">
           <div class="panel-heading">
              <h3 class="text-center">
@@ -37,7 +40,7 @@
         </div>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2">
-       <div class="panel panel-primary">
+       <div ng-if="devices.length != 0" class="panel panel-primary">
            <div class="panel-heading">
                <h4 class="text-center">
                    <i class="fa fa-plus fa-lg"></i>
