--- a/public/index.html
+++ b/public/index.html
@@ -20,14 +20,16 @@
     <title>Octoblu - Internet of Everything!</title>
 
     <!-- SCROLLS -->
-    <link rel="stylesheet" href="assets/stylesheets/main.css" type="text/css">
-    <link href='http://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,300,400,700' rel='stylesheet' type='text/css'>
+    <link href="assets/stylesheets/bootstrap-switch/bootstrap-switch.css" media="all" rel="stylesheet" type="text/css" />
     <link href="assets/stylesheets/light-theme.css" media="all" id="color-settings-body-color" rel="stylesheet" type="text/css" />
     <link href="assets/stylesheets/theme-colors.css" media="all" rel="stylesheet" type="text/css" />
     <link href="assets/stylesheets/demo.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="assets/stylesheets/erosIntro.css" rel="stylesheet" media="screen">
+    <link href="assets/stylesheets/style.css" rel="stylesheet" media="screen">
+    <link href="assets/stylesheets/custom.css" rel="stylesheet">
     <link href="assets/stylesheets/animation.css" rel="stylesheet">
-    <link href="assets/stylesheets/custom.css" type="text/css" rel="stylesheet"/>
+    <link href="assets/stylesheets/font-awesome.min.css" rel="stylesheet" >
+    <link href="assets/stylesheets/athenaSlide.css" rel="stylesheet">
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css" type="text/css"/>
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap-theme.css" type="text/css"/>
     <link rel="stylesheet" href="lib/fontawesome/css/font-awesome.css" type="text/css"/>
@@ -57,38 +59,6 @@
     </style>
 </head>
 <body class="contrast-sea-blue" ng-app="octobluApp">
-
-<!-- NAVBAR -->
-<div class="navbar navbar-fixed-top" ng-hide="authorization.isAuthenticated">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav2">
-                <span class="sr-only">Menu</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <div id="brand">
-                <a href="#top" class="navbar-brand">
-                    <img src="assets/images/octoblu.png" alt="Octoblu Logo" />
-                    <h1 class="hide">Parallax HTML One-Page Template</h1>
-                </a>
-            </div>
-        </div>
-        <nav class="navbar-collapse collapse" id="main-nav2" role="navigation">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="#top">HOME</a></li>
-                <li><a href="#about">ABOUT US</a></li>
-                <li><a href="#services">SERVICES</a></li>
-                <li><a href="#works">OUR WORKS</a></li>
-                <li><a href="#team">TEAM</a></li>
-                <li><a href="#contact">CONTACT US</a></li>
-                <!-- <li><a href="/login">SIGN UP</a></li> -->
-            </ul>
-        </nav>
-    </div>
-</div>
-<!-- END NAVBAR -->
 
 
 <header ng-show="authorization.isAuthenticated">
@@ -214,12 +184,13 @@
 <footer></footer>
 
 <!-- build:js scripts/plugins.js -->
+<!-- <script src="assets/javascripts/athenaSlide.js"></script> -->
 <script src="lib/jquery/dist/jquery.js" type="text/javascript"></script>
 <script src="lib/jquery-ui/ui/jquery-ui.js" type="text/javascript"></script>
-<script src="lib/requirejs/require.js" type="text/javascript"></script>
-<script src="lib/jquery-mobile/js/requirejs.config.js" type="text/javascript"></script>
-<script src="lib/jquery-mobile/js/jquery.mobile.init.js" type="text/javascript"></script>
-<script src="lib/jquery-mobile/js/jquery.mobile.define.js" type="text/javascript"></script>
+<!-- <script src="lib/requirejs/require.js" type="text/javascript"></script> -->
+<!-- <script src="lib/jquery-mobile/js/requirejs.config.js" type="text/javascript"></script> -->
+<!-- <script src="lib/jquery-mobile/js/jquery.mobile.init.js" type="text/javascript"></script> -->
+<!-- <script src="lib/jquery-mobile/js/jquery.mobile.define.js" type="text/javascript"></script> -->
 <script src="lib/angular/angular.js"></script>
 <script src="lib/angular-animate/angular-animate.js"></script>
 <script src="lib/angular-sanitize/angular-sanitize.js"></script>
@@ -241,22 +212,10 @@
 <script src="lib/angular-bootstrap/ui-bootstrap.js"></script>
 <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="lib/isotope/dist/isotope.pkgd.js"></script>
-<script src="lib/skrollr/dist/skrollr.min.js"></script>
 <script src="lib/elastic.js/dist/elastic.js"></script>
 <script src="lib/elasticsearch/elasticsearch.angular.js"></script>
 <script src="lib/smoothie/smoothie.js"></script>
-<script src="lib/jquery.scrollTo/jquery.scrollTo.js"></script>
-<script src="lib/jquery.localScroll/jquery.localScroll.js"></script>
-<script src="lib/jquery-easing/jquery.easing.js"></script>
-<script src="lib/jquery.parallax/jquery.parallax.js"></script>
-<script src="assets/javascripts/google-map.js"></script>
-<script src="lib/twitter-fetcher/twitterFetcher_v10_min.js"></script>
-<script src="lib/imagesloaded/imagesloaded.pkgd.js"></script>
-<script src="lib/flexslider/jquery.flexslider.js"></script>
 <script src="lib/jpreloader/js/jpreloader.js"></script>
-<script src="lib/jquery.videoBG/jquery.videoBG.js"></script>
-<script src="lib/magnific-popup/dist/jquery.magnific-popup.js"></script>
-<script src="lib/WOW/dist/wow.js"></script>
 <script src="assets/javascripts/loop.js"></script>
 <!-- endbuild -->
 
