--- a/public/pages/connector/devices/detail/device-target-permissions.html
+++ b/public/pages/connector/devices/detail/device-target-permissions.html
@@ -9,7 +9,9 @@
     </tr>
     </thead>
     <tr ng-repeat="permission in targetPermissions track by permission.source.uuid ">
-        <td>{{permission.source.properties.name}}</td>
+        <td title="via {{permission.name}}">
+            {{permission.source.properties.name || permission.source.properties.displayName || permission.source.properties.email}}
+        </td>
         <td>
             <div class="btn-group">
                 <label ng-class="{'btn' : true, 'btn-success' : permission.permissions.discover, 'btn-default': !permission.permissions.discover, 'disabled': true}"
