Commented out the pager fields. causing to throw errors.

--- a/public/pages/analyzer.html
+++ b/public/pages/analyzer.html
@@ -54,7 +54,7 @@
                     </div>
                 </div>
 
-                <pager total-items="totalItems" page="currentPage" ng-show="results"></pager>
+                <!--<pager total-items="totalItems" page="currentPage" ng-show="results"></pager>-->
 
             </div>
         </div>
@@ -76,7 +76,6 @@
 		  <h1 >{{device.name}}</h1>
 		  <div class="col-md-4">
 			<h2> Top Devices Sending</h2>
-                        <pager total-items="1" page="currentPage" ng-show="top_device_send" ></pager>
                   </div>
 		  <div class="col-md-4">
 			<h2> Top Devices Receiving</h2>
