made a skynet service that only instantiates the socket connection once, wraps the socket calls, and returns promises. Refactored a few calls to the skynetSocket to use this service instead.

--- a/public/pages/connector/devices/detail/index.html
+++ b/public/pages/connector/devices/detail/index.html
@@ -25,43 +25,45 @@
         <section class="col-xs-12">
             <h3>Permissions</h3>
             <tabset>
-                <tab heading="Accessible By" >
-                    <div ng-include="'/pages/connector/devices/detail/device-target-permissions.html'" ></div>
-
+                <tab ng-if="device.type === 'gateway'" heading="Subdevices" active="true">
+                    <div ng-include="'/pages/connector/devices/detail/subdevices.html'"></div>
+                </tab>
+                <tab heading="Accessible By">
+                    <div ng-include="'/pages/connector/devices/detail/device-target-permissions.html'"></div>
                 </tab>
                 <tab heading="Controls">
-                    <div ng-include="'/pages/connector/devices/detail/device-source-permissions.html'" ></div>
+                    <div ng-include="'/pages/connector/devices/detail/device-source-permissions.html'"></div>
                 </tab>
                 <tab heading="Groups">
-                     <ul class="list-group">
-                       <div class="panel panel-default col-xs-6">
-                           <div class="panel-heading">
-                               Access Groups
-                           </div>
-                           <div class="panel-body">
-                               <ul class="list-group">
-                                   <li class="list-group-item" ng-repeat="group in targetGroups | orderBy: group.name">
-                                       <a href ui-sref="admin.detail({uuid : group.uuid})">{{group.name}}</a>
-                                   </li>
+                    <ul class="list-group">
+                        <div class="panel panel-default col-xs-6">
+                            <div class="panel-heading">
+                                Access Groups
+                            </div>
+                            <div class="panel-body">
+                                <ul class="list-group">
+                                    <li class="list-group-item" ng-repeat="group in targetGroups | orderBy: group.name">
+                                        <a href ui-sref="admin.detail({uuid : group.uuid})">{{group.name}}</a>
+                                    </li>
 
-                               </ul>
-                           </div>
-                       </div>
-                       <div class="panel panel-default col-xs-6">
-                           <div class="panel-heading">
-                               Control Groups
-                           </div>
-                           <div class="panel-body">
-                               <ul class="list-group">
-                                   <li class="list-group-item" ng-repeat="group in sourceGroups | orderBy: group.name">
-                                      <a href ui-sref="admin.detail({uuid : group.uuid})">{{group.name}}</a>
-                                   </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="panel panel-default col-xs-6">
+                            <div class="panel-heading">
+                                Control Groups
+                            </div>
+                            <div class="panel-body">
+                                <ul class="list-group">
+                                    <li class="list-group-item" ng-repeat="group in sourceGroups | orderBy: group.name">
+                                        <a href ui-sref="admin.detail({uuid : group.uuid})">{{group.name}}</a>
+                                    </li>
 
-                               </ul>
+                                </ul>
 
-                           </div>
-                       </div>
-                     </ul>
+                            </div>
+                        </div>
+                    </ul>
                 </tab>
             </tabset>
 
