--- a/public/index.html
+++ b/public/index.html
@@ -232,6 +232,7 @@
 <script src="angular/services/plugin.js"></script>
 <script src="angular/services/invitation.js"></script>
 <script src="angular/services/permissions.js"></script>
+<script src="angular/services/skynet.js"></script>
 <script src="angular/directives/nvd3-line-chart.js"></script>
 <script src="angular/directives/nvd3-pie-chart.js"></script>
 <script src="angular/directives/popover.js"></script>
