--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -4,15 +4,14 @@
         <div class="jumbotron" ng-if="devices.length == 0">
             <p>You have no Devices or Hubs. Add a new Hub</p>
         </div>
-        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 panel" ng-repeat="device in devices | orderBy:'name'">
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 panel device-thumbnail" ng-repeat="device in devices | orderBy:'name'">
           <div class="panel-heading">
-             <h3 class="text-center">
-
+             <h3 class="text-center col-xs-11">
                 {{device.name}}
-                 <div class="pull-right">
-                    <i class="fa fa-power-off" ng-class="{'text-success': device.online, 'text-muted': ! device.online}"></i>
-                 </div>
              </h3>
+              <h3 class="pull-right">
+                  <i class="fa fa-power-off" ng-class="{'text-success': device.online, 'text-muted': ! device.online}"></i>
+              </h3>
 
           </div>
          <div class="panel-body center-block">
