--- a/public/pages/gateways.html
+++ b/public/pages/gateways.html
@@ -23,7 +23,7 @@
 
     <div class="col-sm-12" ng-show="editGatewaySection">
       <h3>Edit Gateway</h3>
-      <input class="form-control" name="gatewayName" ng-model="gatewayName" placeholder="Gateway Name (required)" ng-value="gatewayName" required id="gatewayName">
+      <input class="form-control" name="gatewayName" ng-model="selectedGateway.name" placeholder="Gateway Name (required)" ng-value="gatewayName" required id="gatewayName">
       <br />
       <div ng-repeat="key in keys" class="form-inline">
         <div class="form-group">
@@ -62,7 +62,6 @@
         <tabset vertical="false" type="navType">
 
           <tab heading="Subdevices" style="cursor:pointer;">
-            <!-- <button class="btn btn-success pull-right" ng-click="addSubdevice($index)">Add</button> -->
             <button class="btn btn-success pull-right" ng-click="openNewSubdevice(gateway)">Add</button>
             <div class="table-responsive">
               <table class="table table-striped table-hover">
@@ -117,14 +116,14 @@
 <div>
   <script type="text/ng-template" id="subDeviceModal.html">
       <div class="modal-header">
-          <h3>Add Sub-Device to Gateway: {{selectedGateway.name}}</h3>
+          <h3>Add Sub-Device to Gateway: {{gateway.name}}</h3>
       </div>
       <div class="modal-body">
 
         <div class="form-group">
           <label for="plugin" class="col-sm-2 control-label">Plugin</label>
           <div class="col-sm-10">
-            <select ng-model="plugin" ng-options="plugin.name for plugin in plugins" class="form-control" id="plugin" ng-change="getSchema(plugin)"></select>
+            <select ng-model="plugin" ng-options="plugin.name for plugin in gateway.plugins" class="form-control" id="plugin" ng-change="getSchema(plugin)"></select>
           </div>
         </div>
         <div ng-show="schema">
@@ -148,10 +147,9 @@
 </div>
 
 <!-- Edit Subdevice Modal -->
-<div>
   <script type="text/ng-template" id="editSubDeviceModal.html">
       <div class="modal-header">
-          <h3>Edit Sub-Device on Gateway: {{selectedGateway.name}}</h3>
+          <h3>Edit Sub-Device on Gateway: {{gateway.name}}</h3>
       </div>
       <div class="modal-body">
 
@@ -166,7 +164,8 @@
           <input type="text" ng-model="selectedSubdevice.name" placeholder="name" class="form-control" disabled><br />
           <div class="form-group" ng-repeat="deviceProperty in deviceProperties">
             <div ng-if="deviceProperty.type == 'string' || deviceProperty.type == 'number'">
-              <input type="text" ng-model="selectedSubdevice.options[deviceProperty.name]" placeholder="{{deviceProperty.name}}" class="form-control" ng-required="deviceProperty.required"><!br />
+              <input type="text" ng-model="selectedSubdevice.options[deviceProperty.name]"
+                     placeholder="{{deviceProperty.name}}" class="form-control" ng-required="deviceProperty.required"><!br />
             </div>
             <div ng-if="deviceProperty.type == 'boolean'">
               <input type="checkbox" ng-model="selectedSubdevice.options[deviceProperty.name]" placeholder="{{deviceProperty.name}}" class="form-control" ng-required="deviceProperty.required"><!br />
@@ -179,21 +178,19 @@
           <button class="btn" ng-click="cancel()">Cancel</button>
       </div>
   </script>
-</div>
-
 
 <!-- Plugin Modal -->
 <div>
   <script type="text/ng-template" id="pluginModal.html">
       <div class="modal-header">
-          <h3>Add Plugin to Gateway: {{selectedGateway.name}}</h3>
+          <h3>Add Plugin to Gateway: {{gateway.name}}</h3>
       </div>
       <div class="modal-body">
 
         <div class="form-group">
           <label for="plugin" class="col-sm-2 control-label">Plugins</label>
           <div class="col-sm-10">
-            <select ng-model="plugin" ng-options="plugin.name for plugin in plugins" class="form-control" id="plugin" ng-change="getSchema(plugin)"></select>
+            <select ng-model="plugin" ng-options="plugin.name for plugin in gateway.plugins" class="form-control" id="plugin" ng-change="getSchema(plugin)"></select>
           </div>
         </div>
       </div>
